# gopher64

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build_debug.sh  build_release.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  lint.yml  sec.yml
android-project/: .gitignore  android.toolchain.cmake  gradle.properties  settings.gradle.kts
android-project/app/: build.gradle.kts  proguard-rules.pro
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/io/github/gopher64/gopher64/: N64Activity.kt  SlintActivity.java  SlintActivity.kt
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/gradle/: libs.versions.toml
android-project/gradle/wrapper/: gradle-wrapper.properties
data/: cheats.json  entitlements_prod.plist
data/android/res/mipmap-anydpi-v26/: ic_launcher.xml
data/android/res/values/: ic_launcher_background.xml
data/icon/: generate.sh  gopher64.icns
data/macos/: disable_touch_bar.plist  embedded.provisionprofile  entitlements_prod.plist
data/shader/: crt-aperture.frag  crt_frag.spv  frag.spv  main.frag  main.vert  main_frag.spv  main_vert.spv  output.sh  text_frag.spv  text_vert.spv
data/translations/: README.md  gopher64.pot
data/translations/de/LC_MESSAGES/: gopher64.po
data/translations/es/LC_MESSAGES/: gopher64.po
data/translations/fr/LC_MESSAGES/: gopher64.po
data/translations/ja/LC_MESSAGES/: gopher64.po
data/translations/nl/LC_MESSAGES/: gopher64.po
data/translations/pt_BR/LC_MESSAGES/: gopher64.po
data/translations/ru/LC_MESSAGES/: gopher64.po
data/ui/: Nintendo - Nintendo 64 (DB Export) (20260609-194259).xml
gliden64/: interface.cpp  interface.hpp
gliden64/custom/: Revision.h
gliden64/overrides/mupenplus/: GLideN64_mupenplus.h
parallel-rdp/: interface.cpp  interface.hpp  spirv.hpp  spirv_crt.hpp  wsi_platform.cpp  wsi_platform.hpp
retroachievements/: retroachievements.c  retroachievements.h
src/: c_lib.rs  cheats.rs  device.rs  lib.rs  main.rs  netplay.rs  retroachievements.rs  savestates.rs  simd_compat.rs  tas.rs  ui.rs
src/compat/: aarch64.c  aarch64.cpp  aarch64.rs  simd_aarch64.h  simd_windows_x86_64.h  simd_x86_64.h  sse2neon.h
src/compat/MoltenVK/v1.2.11/: libMoltenVK.7z
src/device/: ai.rs  cache.rs  cart.rs  cart_rom.rs  controller.rs  cop0.rs  cop1.rs  cop2.rs  cpu.rs  cpu_instructions.rs  events.rs  exceptions.rs  fpu_instructions.rs  is_viewer.rs  memory.rs  mempak.rs  mi.rs  pi.rs  pif.rs  rdp.rs  rdram.rs  ri.rs  rsp_cpu.rs  rsp_interface.rs  rsp_su_instructions.rs  rsp_vu_instructions.rs  sgi_dev.rs  si.rs  sram.rs  tlb.rs  ultra_proto.rs  unmapped.rs  vi.rs  vru.rs
src/device/cart/: rom.rs  sc64.rs  sram.rs
src/device/controller/: gbcart.rs  mempak.rs  rumble.rs  transferpak.rs  vru.rs
src/device/pif/: rom.rs
src/ui/: android.rs  android_input.rs  audio.rs  boxart.rs  cheats.rs  config.rs  gui.rs  input.rs  input_capture.rs  input_profile.rs  library_cache.rs  macos.rs  macos_bookmark.m  netplay.rs  retroachievements.rs  storage.rs  usb.rs  video.rs  vru.rs
src/ui/gca/: mod.rs  protocol.rs
src/ui/gui/: about_page.slint  appwindow.slint  blank_page.slint  cheat_page.slint  controller_page.slint  gui_cheats.rs  gui_netplay.rs  input_profile.slint  localgame_page.slint  netplay.rs  netplay_create.slint  netplay_join.slint  netplay_page.slint  netplay_wait.slint  page.slint  pages.slint  profile_wizard.slint  retroachievements_page.slint  settings_page.slint  side_bar.slint  theme.slint  vru_dialog.slint  widgets.slint
