[package]
name = "gopher64"
version = "1.1.14"
edition = "2024"
rust-version = "1.93.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0"
zip = "7.0"
governor = "0.10"
sevenz-rust2 = { version = "0.20", default-features = false }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
slint = { version = "1.15", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-skia"] }
open = "5.3"
sha2 = "0.10"
sdl3-sys = { version = "0.6", features = ["build-from-source-static"] }
sdl3-ttf-sys = { version = "0.6", features = ["build-from-source-static", "no-sdlttf-harfbuzz", "no-sdlttf-plutosvg"] }
rfd = "0.17"
tokio = {version = "1.46", features = ["rt-multi-thread", "macros", "fs"] }
spin_sleep = "1.3"
encoding_rs = "0.8"
mimalloc = "0.1"
regex = "1.11"
tokio-tungstenite = "0.28"
futures = "0.3"
socket2 = { version = "0.6", features = ["all"] }
rand = { version = "0.10.0-rc.9", features = ["chacha"] }
fatfs = "0.3"
semver = "1.0"
postcard = { version = "1.1", features = ["use-std"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["http2","rustls","charset","json","query"] }

[build-dependencies]
winresource = "0.1"
bindgen = "0.72"
slint-build = "1.12"
cc = { version = "1.2", features = ["parallel"] }

[profile.release]
panic = "abort"
lto = "thin"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
panic = "unwind"
